swap inner and outer value of axis in case of negative stat categories(ex. Fouls or Turnovers)